Mobile Overflow Fix Attempt 3

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -112,9 +112,3 @@ progress::-webkit-progress-bar {
 .cup-hover :nth-child(1):hover {
     filter: brightness(1.2);
 }
-html, body {
-    overflow-x: hidden;
-}
-div#root {
-  overflow-x: hidden;
-}
